29 March 2004 Radu Ursu
- rolled back some changes in doc_tex/IOstream/main.tex and doc_tex/IOstream_ref/main.tex

28 March 2004 Radu Ursu
- removed \ccHtmlIndexC from Mode.tex 
- removed wrapper.tex from doc_tex/IOstream

25 March 2004 Radu Ursu
- made the doc work with the new implementation of Manual tools

Version 2.22 (23 October 2003)
- resubmission

Version 2.21 (23 October 2003)
- resubmission

Version 2.20 (23 October 2003)
- resubmission

Version 2.19 (22 October 2003)
- new header

Version 2.18 (1 October 2003)
- Moved \chapter to main.tex

Version 2.17 (22 September 2003)
- new headers

Version 2.16 (29 April 2002)
- split of user and reference manuals

Version 2.15 (11 April 2002)
- doc fixes

Version 2.14 (10 April 2002)
- fixed main.tex in doc of  iostream packages

Version 2.13 (10 April 2002)
- created ref pages for Colors and iostream packages

Version 2.12 (4 September 2001)
- Susan changed \ccSection to \section since the former doesn't work with 
  the pdf conversion.

Version 2.11 (30 july 2001)
- Susan removed \input{Color} from iostream main.tex

Version 2.10 (26 july 2001)
- moved doc files
- make doc of colors no longer a separate chapter

Version 2.9 (12 February 2001)
- use static_cast<>.

Version 2.8 (?? ??????? 200?)
- fixed banner and long lines (31 January 2000)

Version 2.7 (31 January 2000)
cleaned up  CGAL_static_cast(A,B) to static_cast<A>(B)
in io.C

Version 2.6 (21 January 2000)
added a new data member _alpha to Color class
changed int data members to unsigned char in Color class
added a few new beautiful predefined color :
PURPLE, ORANGE, DEEPBLUE, GREY

Version 2.5 (6 July 1999)
added a missing const in Color operator !=

Version 2.4 (2 July 1999)
added still missing std:: to cerr and endl

Version 2.3 (29 June 1999)
added still missing std:: pointed out by Geert Jan

Version 2.2 (22 Juin 1999)
added a few missing std::

Version 2.1 (27 Mai 1999)
- introduced std:: namespaces

Version 2.0 (11 Mar 1999)